outputs/main/hsevo-qd_bpp_online_2025-07-25_06-33-45/problem_iter1_response21.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 26
    priority_score += (bins_remain_cap > 0).astype(int) * (1 - (bins_remain_cap / (bins Remain_cap.mean() + 1e-6)))
                                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
7
1
116.69205856195879
68.85488219552059
109
